project(TKBin)

if (WIN32)
  list( APPEND TKBin_PRECOMPILED_DEFS "-D__BinDrivers_DLL" )
  list( APPEND TKBin_PRECOMPILED_DEFS "-D__BinMDataXtd_DLL" )
  list( APPEND TKBin_PRECOMPILED_DEFS "-D__BinMPrsStd_DLL" )
  list( APPEND TKBin_PRECOMPILED_DEFS "-D__BinMNaming_DLL" )
  list( APPEND TKBin_PRECOMPILED_DEFS "-D__BinTools_DLL" )
  string( REGEX REPLACE ";" " " TKBin_PRECOMPILED_DEFS "${TKBin_PRECOMPILED_DEFS}")
endif()

  list( APPEND TKBin_COMPILER_DIRECTORIES "${WOK_LIB_PATH}" )
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}/inc")
    list( APPEND TKBin_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/inc" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/inc")
    list( APPEND TKBin_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/inc" )
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
    IF(EXISTS "${BUILD_PATCH_DIR}/drv/BinDrivers")
      list( APPEND TKBin_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/BinDrivers" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/BinDrivers")
      list( APPEND TKBin_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/BinDrivers" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/BinMDataXtd")
      list( APPEND TKBin_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/BinMDataXtd" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/BinMDataXtd")
      list( APPEND TKBin_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/BinMDataXtd" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/BinMPrsStd")
      list( APPEND TKBin_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/BinMPrsStd" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/BinMPrsStd")
      list( APPEND TKBin_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/BinMPrsStd" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/BinMNaming")
      list( APPEND TKBin_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/BinMNaming" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/BinMNaming")
      list( APPEND TKBin_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/BinMNaming" )
    ENDIF()

    IF(EXISTS "${BUILD_PATCH_DIR}/drv/BinTools")
      list( APPEND TKBin_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/BinTools" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/BinTools")
      list( APPEND TKBin_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/BinTools" )
    ENDIF()

  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/BinDrivers")
    list( APPEND TKBin_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/BinDrivers" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/BinDrivers")
    list( APPEND TKBin_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/BinDrivers" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/BinMDataXtd")
    list( APPEND TKBin_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/BinMDataXtd" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/BinMDataXtd")
    list( APPEND TKBin_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/BinMDataXtd" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/BinMPrsStd")
    list( APPEND TKBin_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/BinMPrsStd" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/BinMPrsStd")
    list( APPEND TKBin_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/BinMPrsStd" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/BinMNaming")
    list( APPEND TKBin_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/BinMNaming" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/BinMNaming")
    list( APPEND TKBin_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/BinMNaming" )
  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/BinTools")
    list( APPEND TKBin_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/BinTools" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/BinTools")
    list( APPEND TKBin_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/BinTools" )
  ENDIF()

IF (WIN32)
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ELSE()
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ENDIF()

  list( APPEND TKBin_USED_LIBS TKBRep )
  list( APPEND TKBin_USED_LIBS TKMath )
  list( APPEND TKBin_USED_LIBS TKernel )
  list( APPEND TKBin_USED_LIBS TKG2d )
  list( APPEND TKBin_USED_LIBS TKG3d )
  list( APPEND TKBin_USED_LIBS TKCAF )
  list( APPEND TKBin_USED_LIBS TKCDF )
  list( APPEND TKBin_USED_LIBS TKLCAF )
  list( APPEND TKBin_USED_LIBS TKV3d )
  list( APPEND TKBin_USED_LIBS TKBinL )

if (WIN32)
elseif(APPLE)
else()
endif()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinDrivers/BinDrivers.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinDrivers/BinDrivers.cxx" )
    SOURCE_GROUP (BinDrivers FILES "${BUILD_PATCH_DIR}//src/BinDrivers/BinDrivers.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinDrivers/BinDrivers.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinDrivers/BinDrivers.cxx" )
      SOURCE_GROUP (BinDrivers FILES "${CMAKE_SOURCE_DIR}//src/BinDrivers/BinDrivers.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinDrivers/BinDrivers_DocumentRetrievalDriver.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinDrivers/BinDrivers_DocumentRetrievalDriver.cxx" )
    SOURCE_GROUP (BinDrivers FILES "${BUILD_PATCH_DIR}//src/BinDrivers/BinDrivers_DocumentRetrievalDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinDrivers/BinDrivers_DocumentRetrievalDriver.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinDrivers/BinDrivers_DocumentRetrievalDriver.cxx" )
      SOURCE_GROUP (BinDrivers FILES "${CMAKE_SOURCE_DIR}//src/BinDrivers/BinDrivers_DocumentRetrievalDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinDrivers/BinDrivers_DocumentStorageDriver.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinDrivers/BinDrivers_DocumentStorageDriver.cxx" )
    SOURCE_GROUP (BinDrivers FILES "${BUILD_PATCH_DIR}//src/BinDrivers/BinDrivers_DocumentStorageDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinDrivers/BinDrivers_DocumentStorageDriver.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinDrivers/BinDrivers_DocumentStorageDriver.cxx" )
      SOURCE_GROUP (BinDrivers FILES "${CMAKE_SOURCE_DIR}//src/BinDrivers/BinDrivers_DocumentStorageDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd.cxx" )
    SOURCE_GROUP (BinMDataXtd FILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd.cxx" )
      SOURCE_GROUP (BinMDataXtd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_AxisDriver.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_AxisDriver.cxx" )
    SOURCE_GROUP (BinMDataXtd FILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_AxisDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_AxisDriver.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_AxisDriver.cxx" )
      SOURCE_GROUP (BinMDataXtd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_AxisDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_ConstraintDriver.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_ConstraintDriver.cxx" )
    SOURCE_GROUP (BinMDataXtd FILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_ConstraintDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_ConstraintDriver.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_ConstraintDriver.cxx" )
      SOURCE_GROUP (BinMDataXtd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_ConstraintDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_GeometryDriver.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_GeometryDriver.cxx" )
    SOURCE_GROUP (BinMDataXtd FILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_GeometryDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_GeometryDriver.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_GeometryDriver.cxx" )
      SOURCE_GROUP (BinMDataXtd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_GeometryDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_PatternStdDriver.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_PatternStdDriver.cxx" )
    SOURCE_GROUP (BinMDataXtd FILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_PatternStdDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_PatternStdDriver.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_PatternStdDriver.cxx" )
      SOURCE_GROUP (BinMDataXtd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_PatternStdDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_PlacementDriver.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_PlacementDriver.cxx" )
    SOURCE_GROUP (BinMDataXtd FILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_PlacementDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_PlacementDriver.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_PlacementDriver.cxx" )
      SOURCE_GROUP (BinMDataXtd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_PlacementDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_PlaneDriver.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_PlaneDriver.cxx" )
    SOURCE_GROUP (BinMDataXtd FILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_PlaneDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_PlaneDriver.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_PlaneDriver.cxx" )
      SOURCE_GROUP (BinMDataXtd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_PlaneDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_PointDriver.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_PointDriver.cxx" )
    SOURCE_GROUP (BinMDataXtd FILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_PointDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_PointDriver.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_PointDriver.cxx" )
      SOURCE_GROUP (BinMDataXtd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_PointDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_ShapeDriver.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_ShapeDriver.cxx" )
    SOURCE_GROUP (BinMDataXtd FILES "${BUILD_PATCH_DIR}//src/BinMDataXtd/BinMDataXtd_ShapeDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_ShapeDriver.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_ShapeDriver.cxx" )
      SOURCE_GROUP (BinMDataXtd FILES "${CMAKE_SOURCE_DIR}//src/BinMDataXtd/BinMDataXtd_ShapeDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMPrsStd/BinMPrsStd.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMPrsStd/BinMPrsStd.cxx" )
    SOURCE_GROUP (BinMPrsStd FILES "${BUILD_PATCH_DIR}//src/BinMPrsStd/BinMPrsStd.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMPrsStd/BinMPrsStd.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMPrsStd/BinMPrsStd.cxx" )
      SOURCE_GROUP (BinMPrsStd FILES "${CMAKE_SOURCE_DIR}//src/BinMPrsStd/BinMPrsStd.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMPrsStd/BinMPrsStd_AISPresentationDriver.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMPrsStd/BinMPrsStd_AISPresentationDriver.cxx" )
    SOURCE_GROUP (BinMPrsStd FILES "${BUILD_PATCH_DIR}//src/BinMPrsStd/BinMPrsStd_AISPresentationDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMPrsStd/BinMPrsStd_AISPresentationDriver.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMPrsStd/BinMPrsStd_AISPresentationDriver.cxx" )
      SOURCE_GROUP (BinMPrsStd FILES "${CMAKE_SOURCE_DIR}//src/BinMPrsStd/BinMPrsStd_AISPresentationDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMPrsStd/BinMPrsStd_PositionDriver.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMPrsStd/BinMPrsStd_PositionDriver.cxx" )
    SOURCE_GROUP (BinMPrsStd FILES "${BUILD_PATCH_DIR}//src/BinMPrsStd/BinMPrsStd_PositionDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMPrsStd/BinMPrsStd_PositionDriver.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMPrsStd/BinMPrsStd_PositionDriver.cxx" )
      SOURCE_GROUP (BinMPrsStd FILES "${CMAKE_SOURCE_DIR}//src/BinMPrsStd/BinMPrsStd_PositionDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMNaming/BinMNaming.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMNaming/BinMNaming.cxx" )
    SOURCE_GROUP (BinMNaming FILES "${BUILD_PATCH_DIR}//src/BinMNaming/BinMNaming.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMNaming/BinMNaming.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMNaming/BinMNaming.cxx" )
      SOURCE_GROUP (BinMNaming FILES "${CMAKE_SOURCE_DIR}//src/BinMNaming/BinMNaming.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMNaming/BinMNaming_NamedShapeDriver.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMNaming/BinMNaming_NamedShapeDriver.cxx" )
    SOURCE_GROUP (BinMNaming FILES "${BUILD_PATCH_DIR}//src/BinMNaming/BinMNaming_NamedShapeDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMNaming/BinMNaming_NamedShapeDriver.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMNaming/BinMNaming_NamedShapeDriver.cxx" )
      SOURCE_GROUP (BinMNaming FILES "${CMAKE_SOURCE_DIR}//src/BinMNaming/BinMNaming_NamedShapeDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinMNaming/BinMNaming_NamingDriver.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinMNaming/BinMNaming_NamingDriver.cxx" )
    SOURCE_GROUP (BinMNaming FILES "${BUILD_PATCH_DIR}//src/BinMNaming/BinMNaming_NamingDriver.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinMNaming/BinMNaming_NamingDriver.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinMNaming/BinMNaming_NamingDriver.cxx" )
      SOURCE_GROUP (BinMNaming FILES "${CMAKE_SOURCE_DIR}//src/BinMNaming/BinMNaming_NamingDriver.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinTools/BinTools.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinTools/BinTools.cxx" )
    SOURCE_GROUP (BinTools FILES "${BUILD_PATCH_DIR}//src/BinTools/BinTools.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools.cxx" )
      SOURCE_GROUP (BinTools FILES "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinTools/BinTools_Curve2dSet.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinTools/BinTools_Curve2dSet.cxx" )
    SOURCE_GROUP (BinTools FILES "${BUILD_PATCH_DIR}//src/BinTools/BinTools_Curve2dSet.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_Curve2dSet.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_Curve2dSet.cxx" )
      SOURCE_GROUP (BinTools FILES "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_Curve2dSet.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinTools/BinTools_CurveSet.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinTools/BinTools_CurveSet.cxx" )
    SOURCE_GROUP (BinTools FILES "${BUILD_PATCH_DIR}//src/BinTools/BinTools_CurveSet.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_CurveSet.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_CurveSet.cxx" )
      SOURCE_GROUP (BinTools FILES "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_CurveSet.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinTools/BinTools_LocationSet.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinTools/BinTools_LocationSet.cxx" )
    SOURCE_GROUP (BinTools FILES "${BUILD_PATCH_DIR}//src/BinTools/BinTools_LocationSet.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_LocationSet.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_LocationSet.cxx" )
      SOURCE_GROUP (BinTools FILES "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_LocationSet.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinTools/BinTools_ShapeSet.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinTools/BinTools_ShapeSet.cxx" )
    SOURCE_GROUP (BinTools FILES "${BUILD_PATCH_DIR}//src/BinTools/BinTools_ShapeSet.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_ShapeSet.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_ShapeSet.cxx" )
      SOURCE_GROUP (BinTools FILES "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_ShapeSet.cxx")
    ENDIF()
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/BinTools/BinTools_SurfaceSet.cxx")
    list( APPEND TKBin_USED_SRCFILES "${BUILD_PATCH_DIR}//src/BinTools/BinTools_SurfaceSet.cxx" )
    SOURCE_GROUP (BinTools FILES "${BUILD_PATCH_DIR}//src/BinTools/BinTools_SurfaceSet.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_SurfaceSet.cxx")
      list( APPEND TKBin_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_SurfaceSet.cxx" )
      SOURCE_GROUP (BinTools FILES "${CMAKE_SOURCE_DIR}//src/BinTools/BinTools_SurfaceSet.cxx")
    ENDIF()
  ENDIF()


IF (WIN32)
ELSE()

  IF (APPLE)

  ENDIF()

ENDIF()

if ("${USED_TOOLKITS}" STREQUAL "" OR DEFINED TurnONtheTKBin)
 add_library( TKBin SHARED ${TKBin_USED_SRCFILES} )

 set_property(TARGET TKBin PROPERTY FOLDER ApplicationFramework)

 install( TARGETS TKBin
                                 RUNTIME DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_SUFFIX}"
                                 ARCHIVE DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/lib${BUILD_SUFFIX}"
                                 LIBRARY DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/lib${BUILD_SUFFIX}")

 if (MSVC)
  install( FILES  ${CMAKE_BINARY_DIR}/out/bin/Debug/TKBin.pdb CONFIGURATIONS Debug
                                  DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_SUFFIX}")
 endif()


 set_target_properties( TKBin PROPERTIES COMPILE_FLAGS "${TKBin_PRECOMPILED_DEFS}" )
 include_directories( ${TKBin_COMPILER_DIRECTORIES} )
 target_link_libraries( TKBin ${TKBin_USED_LIBS} )
endif()
